# Automate

./: .gitignore  Animation.cxx  Animation.h  Background.gd  Background.tres  Background.tscn  CMakeLists.txt  README.md  Root.tscn  Test.tscn  main.cxx  makefile  project.godot
Actions/: Action.cxx  Action.h  CMakeLists.txt  ControlActions.cxx  ControlActions.h  StdActions.cxx  StdActions.h  TimedAction.cxx  TimedAction.h  Timeline.cxx  Timeline.h  TransformActions.cxx  TransformActions.h
Actors/: Actor.cxx  Actor.h  ActorData.h  ActorData.hxx  Box.h  BoxActor.cxx  BoxActor.h  BoxData.h  BoxData.hxx  CMakeLists.txt  RootActor.cxx  RootActor.h
Animation/: ActorAnimator.cxx  ActorAnimator.h  Animation.cxx  Animation.h  AnimationBuilder.cxx  AnimationBuilder.h  AnimationParser.cxx  AnimationParser.h  AnimationRenderer.cxx  AnimationRenderer.h  CMakeLists.txt  GraphicsImpl.h  GraphicsImplFactory.cxx  PreviewHandle.cxx  PreviewHandle.h  RootAnimator.cxx  RootAnimator.h  SDLFacade.cxx  SDLFacade.h
Directives/: Directive.cxx  Directive.h
GraphicsFacade/: CMakeLists.txt  GraphicsFactory.cxx  GraphicsFactory.h  GraphicsRenderer.h  GraphicsWindow.cxx  GraphicsWindow.h
GraphicsFacade/Vulkan/: CMakeLists.txt  VulkanFactory.cxx  VulkanFactory.h  VulkanRenderer.cxx  VulkanRenderer.h  VulkanWindow.cxx  VulkanWindow.h
Kits/Base/: Root.gd  Root.tscn
Kits/Base/Actions/: Action.gd  Delay.gd  Delay.tscn  Sequence.gd  Sequence.tscn  Wait.gd  Wait.tscn
Kits/Base/Actions/Sequences/: ArraySequence.gd  ArraySequence.tscn  Sequence.gd  Sequence.tscn  SequenceRef.gd  SequenceRef.tscn
Kits/Base/Actions/Tweens/: Fade.gd  Fade.tscn  TweenAction.gd  TweenAction.tscn
Kits/Base/Actions/Tweens/Fades/: FadeIn.gd  FadeIn.tscn  FadeOut.gd  FadeOut.tscn
Kits/Base/Actions/Tweens/Filters/: AdjustBlur.gd  AdjustBlur.tscn
Kits/Base/Actors/: Actor.gd  Text.gd  Text.tscn  Texture.gd  Texture.tscn
Kits/Base/Actors/Containers/: ArrayContainer.gd  ArrayContainer.tscn  Container.gd  Container.tscn
Kits/Base/Actors/Text/: SplitString.gd  SplitString.tscn  Text.gd  Text.tscn
Kits/Base/Assets/: blank.png.import
Kits/Base/Filters/: BlurFIlter.tres  BlurFilter.gd  BlurFilter.tscn
Renderer/: CMakeLists.txt  LogRenderer.cxx  LogRenderer.h  Renderer.h
SDL2Impl/: CMakeLists.txt  SDLGraphicsImpl.cxx  SDLGraphicsImpl.h
Scenes/: Intro.tscn
common/: CMakeLists.txt  Channel.cxx
core/: Animation.cxx  Animation.h  CMakeLists.txt  Version.cxx
core/Actions/: CMakeLists.txt  Timeline.cxx  Timeline.h  TransformActions.h
core/Actors/: BoxActor.cxx  CMakeLists.txt
core/Animators/: ActorAnimator.h  CMakeLists.txt
core/Renderers/: CMakeLists.txt
include/: ActorAnimator.h  Animation.h  Channel.h  GPUFacade.h  GPUSelector.h  GraphicsFacade.h  MediaFacade.h  PreviewWindow.h  UserInterface.h  Version.h  Versions.h  Window.h
interface/: CMakeLists.txt
interface/Shell/: BaseShell.cxx  BaseShell.h  CMakeLists.txt  ConsoleInput.cxx  ConsoleInput.h  GPUShell.cxx  PreviewShell.cxx  PreviewShell.h  Shell.cxx  Shell.h  ShellInterface.cxx  ShellInterface.h  Version.cxx
interface/Shell/Commands/: BasicCommands.cxx  BasicCommands.h  CMakeLists.txt  Command.cxx  Command.h  GPUCommand.cxx  GPUCommand.h  PreviewCommand.cxx  PreviewCommand.h
interface/Shell/Shells/: BaseShell.cxx  BaseShell.h  CMakeLists.txt  GPUShell.cxx  GPUShell.h  PreviewShell.cxx  PreviewShell.h  Shell.cxx  Shell.h
media/: CMakeLists.txt  GPUSelector.cxx  GraphicsFacade.cxx  MediaFacade.cxx  PreviewWindow.cxx
media/SDLWindow/: CMakeLists.txt  SDLWindow.cxx  SDLWindow.h
media/Vulkan/: CMakeLists.txt  VulkanFacade.cxx  VulkanFacade.h
media/Vulkan_SDL/: CMakeLists.txt  QueueFamilyIndices.cxx  QueueFamilyIndices.h  SDLPreviewWindow.cxx  SDLPreviewWindow.h  SDLWindow.cxx  VulkanGPUFacade.cxx  VulkanGPUFacade.h  VulkanGPUSelector.cxx  VulkanGPUSelector.h  VulkanPreviewRenderer.cxx  VulkanPreviewRenderer.h  VulkanSDLMediaFacade.cxx  VulkanSDLMediaFacade.h
src/: CMakeLists.txt  main.cxx
src/Actions/: Action.cxx  Action.h  CMakeLists.txt  TransformActions.h
src/Actors/: Actor.cxx  CMakeLists.txt
src/Animation/: ActorAnimator.h  Animation.cxx  Animation.h  CMakeLists.txt
src/Animators/: CMakeLists.txt
src/Renderer/: CMakeLists.txt
src/Renderers/: CMakeLists.txt  LogRenderer.cxx
template/: CMakeLists.txt  main.cxx
tmpl/: Version.cxx.tmpl
